--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/benjamin-roper/MATH4753rope0007
+BugReports: https://github.com/benjamin-roper/MATH4753rope0007/issues
