--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Benjamin J Roper
 Maintainer: Benjamin J Roper <benjamin.j.roper-1@ou.edu>
 Description: Contains one function for creating BMI groups.
-License: GPL-2
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
