--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ LazyData: true
 RoxygenNote: 7.1.1
 URL: https://github.com/benjamin-roper/MATH4753rope0007
 BugReports: https://github.com/benjamin-roper/MATH4753rope0007/issues
+Depends: 
+    R (>= 2.10)
