--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(addone)
 export(bmi3)
 export(mybin)
 export(myboot2)
+export(mymaxlik)
 export(myncurve)
 export(myplot)
 importFrom(grDevices,rainbow)
